# psi-toolkit

./: .gitignore  CMakeLists.txt  CONVENTIONS.txt  INSTALL.txt  LICENSE.txt  README.txt  blueprint.txt  check.sh  cmake_uninstall.cmake.in  coverage.sh  main-tests.sh  memcpy.supp  quick-check.sh  rungcov.pl  valgrind.supp  vera++2cppcheck.pl
bindings/: CMakeLists.txt
bindings/perl/: CMakeLists.txt  PSIToolkitSimple.i  Test.PL  test-template.t
bindings/python/: #PSIToolkitSimple.i#  CMakeCache.txt  CMakeLists.txt  PSIToolkitSimple.i
bindings/ruby/: CMakeLists.txt  PSIToolkitSimple.i  psitoolkit.rb
common/: CMakeLists.txt  aligning_writer_worker.cpp  aligning_writer_worker.hpp  annotation_item.cpp  annotation_item.hpp  annotation_item_manager.cpp  annotation_item_manager.hpp  annotator.cpp  annotator.hpp  annotator_factory.cpp  annotator_factory.hpp  annotator_promise.cpp  annotator_promise.hpp  ant_like_path_glob.cpp  ant_like_path_glob.hpp  atom_converter.hpp  basic_types.hpp  bi_lang_specific_processor_file_fetcher.cpp  bi_lang_specific_processor_file_fetcher.hpp  bi_language_dependent_annotator_factory.cpp  bi_language_dependent_annotator_factory.hpp  config.h.in  config.hpp.in  configurator.cpp  configurator.hpp  cutter.cpp  cutter.hpp  cutter_annotator_options.cpp  cutter_annotator_options.hpp  escaping.cpp  escaping.hpp  exceptions.hpp  file_extractor.cpp  file_extractor.hpp  file_fetcher.cpp  file_fetcher.hpp  file_recognizer.cpp  file_recognizer.hpp  file_storage.cpp  file_storage.hpp  (+90 more)
common/j/: CMakeLists.txt  HelloWorld.java
common/java/: HelloWorld.java
common/plugins/: CMakeLists.txt  abstract_plugin.cpp  abstract_plugin.hpp  archlinux_plugin_requirements_checker.cpp  archlinux_plugin_requirements_checker.hpp  plugin.hpp  plugin_adapter.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_requirements_checker.cpp  plugin_requirements_checker.hpp  ubuntu_plugin_requirements_checker.cpp  ubuntu_plugin_requirements_checker.hpp
common/t/: CMakeLists.txt  annotation_item_tests.cpp  annotation_item_tests.hpp  ant_like_path_glob_tests.cpp  ant_like_path_glob_tests.hpp  broken.xml  by_spaces_cutter.cpp  by_spaces_cutter.hpp  fake_lemmatizer.cpp  fake_lemmatizer.hpp  file_extractor_tests.cpp  file_fetcher_tests.cpp  file_fetcher_tests.hpp  file_recognizer_tests.cpp  java_virtual_machine_tests.cpp  java_virtual_machine_tests.hpp  lattice_iter_writer_tests.cpp  lattice_preparators.cpp  lattice_preparators.hpp  lattice_readers_writers_tests.cpp  lattice_readers_writers_tests.hpp  lattice_tests.cpp  lattice_tests.hpp  layer_tags_tests.cpp  layer_tags_tests.hpp  literal_test_output_iterator.cpp  literal_test_output_iterator.hpp  morfologik_tests.hpp  object_cache_tests.cpp  object_cache_tests.hpp  quoter_tests.cpp  quoter_tests.hpp  regexp_tests.cpp  regexp_tests.hpp  segment_glob_tests.cpp  segment_glob_tests.hpp  simple.xml  space-entity.xml  spaces.xml  string_frag_tests.cpp  (+5 more)
fex/: CMakeLists.txt  demo.c  demo_directory.c  demo_read.c  demo_rewind.c  demo_seek.c
fex/7z_C/: 7zAlloc.h  7zCrc.h  7zExtract.h  7zIn.c  7zIn.h  LzmaDec.c  Types.h
fex/fex/: Binary_Extractor.cpp  Binary_Extractor.h  Data_Reader.cpp  Data_Reader.h  File_Extractor.cpp  File_Extractor.h  Gzip_Extractor.cpp  Gzip_Extractor.h  Gzip_Reader.cpp  Gzip_Reader.h  Rar_Extractor.cpp  Rar_Extractor.h  Zip7_Extractor.cpp  Zip7_Extractor.h  Zip_Extractor.cpp  Zip_Extractor.h  Zlib_Inflater.cpp  Zlib_Inflater.h  blargg_common.cpp  blargg_common.h  blargg_config.h  fex.cpp  (+5 more)
formats/: CMakeLists.txt
framework/: CMakeLists.txt  aliaser.cpp  aliaser.hpp  auto_completer.cpp  auto_completer.hpp  console_help_formatter.cpp  console_help_formatter.hpp  factories_keeper.cpp  factories_keeper.hpp  git_info.cpp.in  git_info.hpp  help_formatter.cpp  help_formatter.hpp  html_help_formatter.cpp  html_help_formatter.hpp  main_factories_keeper.cpp  main_factories_keeper.hpp  pipe_runner.cpp  pipe_runner.hpp  pipeline_element_specification.hpp  pipeline_specification.hpp  psi-pipe.cpp  version_information.cpp  version_information.hpp
maxent/: CMakeLists.txt  eventspace.tcc  gistrainer.cpp  gistrainer.hpp  hash_map.hpp  itemmap.hpp  lbfgstrainer.cpp  maxent.cpp  maxentmodel.cpp  meevent.hpp  mmapfile.cpp  mmapfile.h  modelfile.cpp  rfevent.hpp
prj/: .gitignore  Makefile.am  README  configure.ac  pcre.supp  re2.supp
server/: CMakeLists.txt  file_recognizer.cpp  file_recognizer.hpp  filetype_recognizer.cpp  filetype_recognizer.hpp  guid_generator.cpp  guid_generator.hpp  help_site.cpp  help_site.hpp  index_site.cpp  index_site.hpp  json_site.cpp  json_site.hpp  md5.cpp  output_saver.cpp  output_saver.hpp  pipe_site.cpp  pipe_site.hpp  psi-server.cpp  psi_request_handler.cpp  psi_request_handler.hpp  psi_server.cpp  psi_server.hpp  server_runner.cpp  server_runner.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  site_hello_world.hpp  template_site.hpp
sundown/: CMakeLists.txt
tests/: CMakeLists.txt  README.txt  batch_runner.cpp  batch_runner.hpp  junit_mass_tests_reporter.cpp  junit_mass_tests_reporter.hpp  mass-tests.cpp  mass_tester.cpp  mass_tester.hpp  mass_tests_reporter.hpp  none_mass_tests_reporter.hpp  perl-test-runner.sh  python-test-runner.sh  ruby-test-runner.sh  test_batch.cpp  test_batch.hpp  test_extractor.cpp  test_extractor.hpp  test_runner.cpp  tests.hpp
tools/: CMakeLists.txt
utf8case/: CMakeLists.txt  case_converter_factory.hpp  case_tables.cpp  case_tables.hpp  contextual_case_converter.hpp  general_case_converter.hpp  generate_case_tables.pl  range_based_case_converter.cpp  range_based_case_converter.hpp  regular_contextual_case_converter.cpp  regular_contextual_case_converter.hpp  simple_convert.cpp  simple_convert.hpp  special_casing_converter.cpp  special_casing_converter.hpp  string_case_converter_manager.cpp  string_case_converter_manager.hpp  turkish_and_azeri_lower_contextual_case_converter.cpp  turkish_and_azeri_lower_contextual_case_converter.hpp  turkish_and_azeri_upper_contextual_case_converter.cpp  turkish_and_azeri_upper_contextual_case_converter.hpp
(+1415 files in other folders)
